complete all project pages

--- a/forum.html
+++ b/forum.html
@@ -64,7 +64,7 @@
         </div>
     </section>
     <footer>
-        <p>&copy; 2023 Mon Portfolio. Tous droits réservés.</p>
+        <p>&copy; 2024 Noé LECHAT. Tous droits réservés.</p>
     </footer>
     <a href="#" class="top"><i class="bx bx-up-arrow-alt"></i></a>
     <script src="projects.js"></script>
