--- a/tiki-taka-toe.html
+++ b/tiki-taka-toe.html
@@ -41,25 +41,25 @@
     <section class="project-presentation">
         <div class="project-target">
             <h2><span>OBJECTIFS</span> DU PROJET</h2>
-            <p>Ce projet, réalisé en 2023, a été l'un de mes premiers exercices lors de mon apprentissage de React. L'objectif principal était d'améliorer mes compétences en développement front-end. Il s'agit d'un exercice proposé par le site web Frontend Mentor, qui offre une variété d'exercices avec des niveaux de difficulté et des thématiques diversifiés.
-
-                Le but de cet exercice était de reproduire fidèlement une maquette fournie par le site, représentant la vitrine en ligne d'une marque de création de meubles. Une fois le projet terminé, la solution pouvait être partagée avec d'autres membres de la plateforme pour obtenir des retours sur la qualité de la réalisation.</p>
+            <p>Dans le cadre d’un projet de fin de module JavaScript, j’ai développé un site de mini-jeux sur le thème du football en collaboration avec plusieurs camarades. Nous pouvions choisir le sujet que nous voulions pour ce projet, nous avons donc décidé de nous orienté vers le football.
+                <br><br>Ce site propose plusieurs expériences ludiques, dont un jeu de type Motus où les joueurs doivent deviner les noms de footballeurs en se basant sur des lettres correctes ou mal placées, à l’image du célèbre jeu de lettres. Un autre mini-jeu consiste à identifier un joueur de football en découvrant des indices progressivement dévoilés, tels que son club actuel, son âge, ou d’autres informations caractéristiques</p>
         </div>
         <div class="roleinproject">
             <h2>MON <span>RÔLE</span> DANS LE PROJET</h2>
-            <p>Ce projet, réalisé en 2023, a été l'un de mes premiers exercices lors de mon apprentissage de React. L'objectif principal était d'améliorer mes compétences en développement front-end. Il s'agit d'un exercice proposé par le site web Frontend Mentor, qui offre une variété d'exercices avec des niveaux de difficulté et des thématiques diversifiés.
+            <p>Dans ce projet, j’ai joué un rôle clé qui a couvert plusieurs aspects importants du développement. Tout a commencé par la recherche d’une API fiable et riche en données sur les joueurs de football. Après plusieurs essais et comparaisons, j’ai trouvé une API qui répondait aux besoins du projet en offrant des informations telles que les noms, clubs, âges, et autres détails utiles sur les joueurs. 
+                <br><br> Une fois cette étape franchie, j’ai travaillé sur l’intégration des données. Cela a impliqué d’écrire les requêtes nécessaires pour extraire les informations pertinentes, adaptées à chaque page du site. Par exemple, pour le jeu Motus, j’ai sélectionné les noms des joueurs, tandis que pour le jeu d’identification progressive, j’ai récupéré des données supplémentaires comme le club ou l’âge des joueurs.
 
-                Le but de cet exercice était de reproduire fidèlement une maquette fournie par le site, représentant la vitrine en ligne d'une marque de création de meubles. Une fois le projet terminé, la solution pouvait être partagée avec d'autres membres de la plateforme pour obtenir des retours sur la qualité de la réalisation.</p>
+                <br><br>Une fois les données en place, j’ai pris en charge le développement de la partie back-end des mini-jeux. J’ai implémenté la logique permettant de comparer les réponses des utilisateurs avec les données récupérées, de gérer les indices à dévoiler au fil des tentatives, et d’assurer une interaction fluide entre le front-end et le back-end. J’ai veillé à ce que chaque mini-jeu soit dynamique et réactif, garantissant une expérience utilisateur immersive. Ce rôle m’a permis d’exploiter mes compétences en manipulation d’API, en gestion de données, et en développement back-end, tout en contribuant à un projet interactif et ludique.</p>
         </div>
         <div class="learninproject">
             <h2>CE QUE J'AI <span>APPRIS</span> </h2>
-            <p>Ce projet, réalisé en 2023, a été l'un de mes premiers exercices lors de mon apprentissage de React. L'objectif principal était d'améliorer mes compétences en développement front-end. Il s'agit d'un exercice proposé par le site web Frontend Mentor, qui offre une variété d'exercices avec des niveaux de difficulté et des thématiques diversifiés.
-
-                Le but de cet exercice était de reproduire fidèlement une maquette fournie par le site, représentant la vitrine en ligne d'une marque de création de meubles. Une fois le projet terminé, la solution pouvait être partagée avec d'autres membres de la plateforme pour obtenir des retours sur la qualité de la réalisation.</p>
+            <p>Ce projet m’a permis de consolider plusieurs compétences clés. J’ai appris à intégrer des API et à extraire des données spécifiques pour répondre à des besoins précis, ce qui m’a permis de mieux comprendre la manipulation de données dynamiques. En travaillant sur le back-end, j’ai approfondi ma maîtrise de la logique applicative et de la gestion des interactions entre le front-end et le back-end.
+                
+            </p>
         </div>
     </section>
     <footer>
-        <p>&copy; 2023 Mon Portfolio. Tous droits réservés.</p>
+        <p>&copy; 2024 Noé LECHAT. Tous droits réservés.</p>
     </footer>
     <a href="#" class="top"><i class="bx bx-up-arrow-alt"></i></a>
     <script src="projects.js"></script>
