--- a/main.html
+++ b/main.html
@@ -53,7 +53,7 @@
             <h2>A propos de <span>moi</span> </h2>
             <h4>Recherche un stage en dévelopemment web</h4>
             <p>Je suis un étudiant en informatique spécialisé dans le développement web. J'ai commencé à apprendre le développement web il y a 2 ans et j'ai acquis de l'expérience dans ce domaine. J'ai travaillé sur plusieurs projets personnels et j'ai également travaillé en tant que développeur web pour une entreprise. J'ai de bonnes compétences en HTML, CSS, JavaScript, React et Node.js. Je suis également passionné par le développement web et j'aime apprendre de nouvelles technologies.</p>
-            <a href="./docs/CV_2024-11-12_Noé_LECHAT.pdf" class="btn" download="./docs/CV_2024-11-12_Noé_LECHAT.pdf">Télécharger CV</a>
+            <a href="./docs/Noé_LECHAT_CV.pdf" class="btn" download="./docs/Noé_LECHAT_CV.pdf">Télécharger CV</a>
         </div>
     </section>
     <section class="skills" id="skills">
@@ -193,7 +193,7 @@
                     <div class="layer">
                         <h5>Portfolio</h5>
                         <p>Création de mon portfolio</p>
-                        <a href="betterDJ.html"><i class="bx bx-plus-circle"></i></a>
+                        <a href="portfolio.html"><i class="bx bx-plus-circle"></i></a>
                     </div>
                 </div>
             </div>
