responsive for contact and about part

--- a/forum.html
+++ b/forum.html
@@ -32,6 +32,7 @@
                     <i class='bx bxl-css3' id="techno" style='color:#147bbc' data-lang="CSS"></i>
                     <i class='bx bxl-go-lang' id="techno" style='color:#00a9d2' data-lang="GOLANG"></i>
                     <i class='bx bxl-docker' style='color:#008de1' data-lang="DOCKER"></i>
+                    <i class='bx bxl-trello' style='color:#1f2328' data-lang="TRELLO"></i>
                 </div>
             </div>
             <div class="github-link">
