--- a/main.html
+++ b/main.html
@@ -18,6 +18,9 @@
             <a href="#portfolio" id="nav-portfolio" style="--i:4">Projets</a>
             <a href="#contact" id="nav-contact" style="--i:5">Contact</a>
         </nav>
+        <div class="burger-menu" id="burger-menu">
+            <i class='bx bx-menu'></i>
+        </div>
         <a href="#home" class="logo">Portfolio</a>
     </header>
     <section class="home" id="home">
