--- a/portfolio.html
+++ b/portfolio.html
@@ -30,6 +30,7 @@
                     <i class='bx bxl-javascript' id="techno" style='color:#e9d44d' data-lang="JAVASCRIPT"></i>  
                     <i class='bx bxl-html5' id="techno" style='color:#dd4b24' data-lang="HTML"></i>
                     <i class='bx bxl-css3' id="techno" style='color:#147bbc' data-lang="CSS"></i>
+                    <i class='bx bxl-trello' style='color:#1f2328' data-lang="TRELLO"></i>
                 </div>
             </div>
             <div class="github-link">
