Add som responsive and test it

--- a/main.html
+++ b/main.html
@@ -26,7 +26,7 @@
     <section class="home" id="home">
         <div class="home-content">
             <h3>Bonjour, je m'appelle</h3>
-            <h1>Noé LECHAT</h1>
+            <h1><span>Noé</span> LECHAT</h1>
             <br>
             <p>Etudiant en informatique spécialisé dans le dévelopemment web</p>
             <div class="home-sci">
@@ -109,7 +109,7 @@
                     <i class='bx bx-git-branch' style='color:#96d1d1' ></i>
                     <h2>Gestion de projets</h2>
                     <p>J'ai développé des compétences en gestion de projets en travaillant sur divers projets, où j'ai appris à organiser, planifier et coordonner les tâches efficacement. Je m'efforce de respecter les délais tout en assurant la communication
-                         et la collaboration au sein de l'équipe, et je suis toujours désireux d'améliorer mes méthodes pour mener à bien chaque projet</p>
+                         et la collaboration au sein de l'équipe, et je suis toujours désireux d'améliorer mes méthodes pour mener à bien chaque projet.</p>
                         <a href="#" class="read" onclick="DisplayBack('3')">Voir plus</a>
                 </div>
                 <div class="back-card" id="back-card-3">
@@ -130,7 +130,7 @@
                     <i class='bx bx-brain' style='color:#96d1d1' ></i>
                     <h2>Collaboration</h2>
                     <p>Je suis habitué à travailler en équipe, où je valorise la communication et l’échange d’idées. J’adapte mes actions aux besoins du groupe et je m’assure de contribuer
-                         à l’atteinte des objectifs communs en respectant les délais et en soutenant mes collègues dans leurs tâches</p>
+                         à l’atteinte des objectifs communs en respectant les délais et en soutenant mes collègues dans leurs tâches.</p>
                         <a href="#" class="read" onclick="DisplayBack('4')">Voir plus</a>
                 </div>
                 <div class="back-card" id="back-card-4">
@@ -147,7 +147,7 @@
                     <i class='bx bxs-battery-full' style='color:#96d1d1' ></i>
                     <h2>Autonomie</h2>
                     <p>Je suis capable de travailler de manière indépendante, en gérant efficacement mon temps et mes priorités. J'aime résoudre
-                         des problèmes par moi-même et prendre des initiatives pour atteindre mes objectifs, tout en restant responsable de mes actions et résultats</p>
+                         des problèmes par moi-même et prendre des initiatives pour atteindre mes objectifs, tout en restant responsable de mes actions et résultats.</p>
                         <a href="#" class="read" onclick="DisplayBack('5')">Voir plus</a>
                 </div>
                 <div class="back-card" id="back-card-5">
