correct some responsive

--- a/main.html
+++ b/main.html
@@ -154,9 +154,9 @@
                     <section class="back-card-arrow">
                             <i class='bx bx-arrow-back' style='color:#96d1d1' onclick="Refresh('5')" id="arrow" ></i>
                     </section>
-                    <section class="back-card-logos">
+                    <section class="back-card-logos" >
                         <i class='bx bx-sync' style='color:#96d1d1'><p>Adaptation</p></i>
-                        <i class='bx bx-bulb' style='color:#96d1d1'><p>Résolution de problèmes</p></i>
+                        <i class='bx bx-bulb' style='color:#96d1d1'><p>Esprit logique</p></i>
                         <i class='bx bx-book-open' style='color:#96d1d1'><p>Autodidacte</p></i>
                     </section>
                 </div>
