responsive project page

--- a/forum.html
+++ b/forum.html
@@ -17,7 +17,7 @@
         </div>
         <div class="project-details-title">
             <h1><span>FO</span>RUM</h1>
-            <p>Forum en ligne</p>
+            <h4>Forum en ligne</h4>
         </div>
         <div class="project-technos">
             <div class="year">
