--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
         </div>
         <div class="project-details-title">
             <h1><span>PORT</span>FOLIO</h1>
-            <p>Mon portfolio</p>
+            <h4>Mon portfolio</h4>
         </div>
         <div class="project-technos">
             <div class="year">
