--- a/tiki-taka-toe.html
+++ b/tiki-taka-toe.html
@@ -17,7 +17,7 @@
         </div>
         <div class="project-details-title">
             <h1><span>TIKI</span>-TAKA-TOE</h1>
-            <p>Mini-jeux de football en ligne</p>
+            <h4>Mini-jeux de football en ligne</h4>
         </div>
         <div class="project-technos">
             <div class="year">
