--- a/betterDJ.html
+++ b/betterDJ.html
@@ -17,7 +17,7 @@
         </div>
         <div class="project-details-title">
             <h1><span>BETTER</span> DJ</h1>
-            <p>Site vitrine de l'application BetterDJ</p>
+            <h4>Site vitrine de l'application BetterDJ</h4>
         </div>
         <div class="project-technos">
             <div class="year">
