change section to article

--- a/main.html
+++ b/main.html
@@ -72,10 +72,10 @@
                         <a href="#" class="read" onclick="DisplayBack('1')">Voir plus</a>
                 </div>
                 <div class="back-card" id="back-card-1">
-                    <section class="back-card-arrow">
+                    <article class="back-card-arrow">
                             <i class='bx bx-arrow-back' style='color:#96d1d1' onclick="Refresh('1')" id="arrow" ></i>
-                    </section>
-                    <section class="back-card-logos">
+                    </article>
+                    <article class="back-card-logos">
                         <i class='bx bxl-javascript' id="techno" style='color:#e9d44d'><p>JavaScript</p></i>  
                         <i class='bx bxl-html5' id="techno" style='color:#dd4b24'  ><p>HTML</p></i>
                         <i class='bx bxl-css3' id="techno" style='color:#147bbc'  ><p>CSS</p></i>
@@ -85,7 +85,7 @@
                         <i class='bx bxl-typescript' id="techno" style='color:#2f74c0'  ><p>TypeScript</p></i>
                         <i class='bx bxl-docker' style='color:#008de1'  ><p>Docker</p></i>
                         <i><p></p></i>
-                    </section>
+                    </article>
                 </div>
                 <div id="card-2">
                     <i class='bx bxs-data' style='color:#96d1d1' ></i>
@@ -96,14 +96,14 @@
                         <a href="#" class="read" onclick="DisplayBack('2')">Voir plus</a>
                 </div>
                 <div class="back-card" id="back-card-2">
-                    <section class="back-card-arrow">
+                    <article class="back-card-arrow">
                             <i class='bx bx-arrow-back' style='color:#96d1d1' onclick="Refresh('2')" id="arrow" ></i>
-                    </section>
-                    <section class="back-card-logos">
+                    </article>
+                    <article class="back-card-logos">
                         <i class='bx bxs-data' style='color:gray'  ><p>SQL</p></i>
                         <i class='bx bxl-python' style='color:aliceblue'  ><p>Python</p></i>
                         <i class='bx bxl-mongodb' style='color:#4da53f' ><p>MongoDB</p></i>
-                    </section>
+                    </article>
                 </div>
                 <div id="card-3">
                     <i class='bx bx-git-branch' style='color:#96d1d1' ></i>
@@ -113,13 +113,13 @@
                         <a href="#" class="read" onclick="DisplayBack('3')">Voir plus</a>
                 </div>
                 <div class="back-card" id="back-card-3">
-                    <section class="back-card-arrow">
+                    <article class="back-card-arrow">
                             <i class='bx bx-arrow-back' style='color:#96d1d1' onclick="Refresh('3')" id="arrow" ></i>
-                    </section>
-                    <section class="back-card-logos">
+                    </article>
+                    <article class="back-card-logos">
                         <i class='bx bxl-github' style='color:#1f2328'  ><p>Github</p></i>
                         <i class='bx bxl-trello' style='color:#1f2328' ><p>Trello</p></i>
-                    </section>
+                    </article>
                 </div>
             </div>
         </div>
@@ -134,14 +134,14 @@
                         <a href="#" class="read" onclick="DisplayBack('4')">Voir plus</a>
                 </div>
                 <div class="back-card" id="back-card-4">
-                    <section class="back-card-arrow">
+                    <article class="back-card-arrow">
                             <i class='bx bx-arrow-back' style='color:#96d1d1' onclick="Refresh('4')" id="arrow" ></i>
-                    </section>
-                    <section class="back-card-logos">
+                    </article>
+                    <article class="back-card-logos">
                         <i class='bx bx-chat' style='color:#96d1d1' ><p>Communication</p></i>
                         <i class='bx bx-group' style='color:#96d1d1'  ><p>Travail en équipe</p></i>
                         <i class='bx bx-time five' style='color:#96d1d1'  ><p>Gestion du temps</p></i>
-                    </section>
+                    </article>
                 </div>
                 <div id="card-5">
                     <i class='bx bxs-battery-full' style='color:#96d1d1' ></i>
@@ -151,14 +151,14 @@
                         <a href="#" class="read" onclick="DisplayBack('5')">Voir plus</a>
                 </div>
                 <div class="back-card" id="back-card-5">
-                    <section class="back-card-arrow">
+                    <article class="back-card-arrow">
                             <i class='bx bx-arrow-back' style='color:#96d1d1' onclick="Refresh('5')" id="arrow" ></i>
-                    </section>
-                    <section class="back-card-logos" >
+                    </article>
+                    <article class="back-card-logos" >
                         <i class='bx bx-sync' style='color:#96d1d1'><p>Adaptation</p></i>
                         <i class='bx bx-bulb' style='color:#96d1d1'><p>Esprit logique</p></i>
                         <i class='bx bx-book-open' style='color:#96d1d1'><p>Autodidacte</p></i>
-                    </section>
+                    </article>
                 </div>
         </div>
     </section>           
@@ -203,7 +203,7 @@
         </div>
     </div>
     </section>
-    <div id="contact"></div>
+    <article id="contact"></article>
     <section class="contact">
         <div class="contact-text">
             <h2>Contactez-<span>moi</span></h2>
