bug icons technos

--- a/forum.html
+++ b/forum.html
@@ -12,7 +12,7 @@
         <div class="project-exit">
             <a class="go-back" href="main.html">
             <img src="./images/arrow.svg" alt="fleche gauche">
-            <p>Retour aux projetse</p>
+            <p>Retour aux projets</p>
         </a> 
         </div>
         <div class="project-details-title">
