change orthograph mistakes

--- a/main.html
+++ b/main.html
@@ -28,7 +28,7 @@
             <h3>Bonjour, je m'appelle</h3>
             <h1><span>Noé</span> LECHAT</h1>
             <br>
-            <p>Etudiant en informatique spécialisé dans le dévelopemment web</p>
+            <p>Etudiant en informatique</p>
             <div class="home-sci">
                 <a href="https://www.linkedin.com/in/noé-lechat-175b90265" style="--i:6"><i class='bx bxl-linkedin' ></i></a>
                 <a href="https://github.com/lechatn" style="--i:7"><i class='bx bxl-github' ></i></a>
@@ -54,7 +54,7 @@
         </div>
         <div class="about-text">
             <h2>A propos de <span>moi</span> </h2>
-            <h4>Recherche un stage en dévelopemment web</h4>
+            <h4>Recherche un stage en data IA / développement web</h4>
             <p>Je suis un étudiant en informatique spécialisé dans le développement web. J'ai commencé à apprendre le développement web il y a 2 ans et j'ai acquis de l'expérience dans ce domaine. J'ai travaillé sur plusieurs projets personnels et j'ai également travaillé en tant que développeur web pour une entreprise. J'ai de bonnes compétences en HTML, CSS, JavaScript, React et Node.js. Je suis également passionné par le développement web et j'aime apprendre de nouvelles technologies.</p>
             <a href="./docs/Noé_LECHAT_CV.pdf" class="btn" download="./docs/Noé_LECHAT_CV.pdf">Télécharger CV</a>
         </div>
@@ -66,7 +66,7 @@
             <div class="skills-list">
                 <div id="card-1">
                     <i class='bx bx-code-alt' style='color:#96d1d1'></i>
-                    <h2>Dévelopemment web</h2>
+                    <h2>Développement web</h2>
                     <p id="description">Je suis passionné par le développement web depuis maintenant 4 ans. Je possède une bonne expérience, avec de fortes compétences au niveau back-end. Je reste 
                         également apte à travailler sur des projets front-end ainsi qu'à découvrir de nouveaux domaines tels que le développement mobile.</p>
                         <a href="#" class="read" onclick="DisplayBack('1')">Voir plus</a>
