organize style page

--- a/main.html
+++ b/main.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
-    <title>Portfolio</title>
+    <title>NL | Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="icon" href="./images/logoNL.png" type="image/png">
@@ -12,7 +12,7 @@
 <body>
     <header class="header">
         <nav class="navbar">
-            <a href="#home" id="nav-home" style="--i:1" class="active">Accueil</a>
+            <a href="#home" id="nav-home" style="--i:1">Accueil</a>
             <a href="#about" id="nav-about" style="--i:2">A propos</a>
             <a href="#skills" id="nav-skill" style="--i:3">Compétences</a>
             <a href="#portfolio" id="nav-portfolio" style="--i:4">Projets</a>
