--- a/betterDJ.html
+++ b/betterDJ.html
@@ -57,7 +57,7 @@
         <div class="learninproject">
             <h2>CE QUE J'AI <span>APPRIS</span> </h2>
             <p>Pour ce projet, j'ai appris à utiliser Angular, un framework que je ne connaissais pas avant. Grâce à Angular, j'ai pu créer une interface utilisateur réactive et dynamique pour le site vitrine. En travaillant sur cette page unique, j'ai appris à organiser le contenu de manière fluide tout en optimisant l'expérience utilisateur.
-                <br> <br> Ce projet m'a permis de mieux comprendre la structure d'une application web avec Angular, ainsi que l'intégration de divers éléments interactifs pour rendre l'interface plus engageante</p>
+                <br> <br> Ce projet m'a permis de mieux comprendre la structure d'une application web avec Angular, ainsi que l'intégration de divers éléments interactifs pour rendre l'interface plus engageante.</p>
         </div>
     </section>
     <footer>
