--- a/main.html
+++ b/main.html
@@ -55,7 +55,7 @@
         <div class="about-text">
             <h2>A propos de <span>moi</span> </h2>
             <h4>Recherche un stage en data IA / développement web</h4>
-            <p>Je suis un étudiant en informatique spécialisé dans le développement web. J'ai commencé à apprendre le développement web il y a 2 ans et j'ai acquis de l'expérience dans ce domaine. J'ai travaillé sur plusieurs projets personnels et j'ai également travaillé en tant que développeur web pour une entreprise. J'ai de bonnes compétences en HTML, CSS, JavaScript, React et Node.js. Je suis également passionné par le développement web et j'aime apprendre de nouvelles technologies.</p>
+            <p>Je suis un étudiant en deuxième année d'informatique, passionné et curieux, actuellement à la recherche d'un stage dans les domaines de la data ou du développement web, deux domaines qui me plaisent depuis le début de mon cursus. Enthousiaste à l'idée d'apprendre et de collaborer, je suis prêt à m'investir pleinement pour intégrer une équipe professionnelle et explorer les différentes voies de ma future carrière.</p>
             <a href="./docs/Noé_LECHAT_CV.pdf" class="btn" download="./docs/Noé_LECHAT_CV.pdf">Télécharger CV</a>
         </div>
     </section>
@@ -90,8 +90,7 @@
                 <div id="card-2">
                     <i class='bx bxs-data' style='color:#96d1d1' ></i>
                     <h2>Base de données</h2>
-                    <p>J'ai découvert il y a peu de temps l'univers des bases de données et j'ai acquis de nombreuses compétences dans des domaines tels que la conception, 
-                        l'administration et l'utilisation de bases de données. Cependant, je souhaite continuer à approfondir mes connaissances, explorer de nouvelles technologies et me perfectionner dans l'optimisation des performances et la sécurité des données.
+                    <p>Je possède de bonnes compétences dans la conception, l'administration et l'utilisation de bases de données. Je suis également motivé à approfondir mes connaissances, à explorer de nouvelles technologies et à me perfectionner dans des domaines clés tels que l'optimisation des performances et la sécurité des données.
                     </p>
                         <a href="#" class="read" onclick="DisplayBack('2')">Voir plus</a>
                 </div>
@@ -207,9 +206,9 @@
     <section class="contact">
         <div class="contact-text">
             <h2>Contactez-<span>moi</span></h2>
-            <h5>Si vous avez la moindre question, n'hésitez pas à me contacter via mes réseaux sociaux ou en complètant ce formulaire!</h5>
+            <h5>Si vous avez la moindre question, n'hésitez pas à me contacter via mes réseaux sociaux ou en complétant ce formulaire!</h5>
             <p>Les informations recueillies via ce formulaire sont utilisées uniquement pour répondre à votre demande. Elles ne seront jamais partagées avec des tiers sans votre consentement. 
-                Conformément au RGPD, vous avez un droit d'accès, de modification, et de suppression de vos données.</p>
+                Conformément au RGPD, vous avez un droit d'accès, de modification et de suppression de vos données.</p>
             <div class="contact-list">
                 <li><i class='bx bxs-send'></i>lechatnoe@gmail.com</li>
                 <li><i class='bx bxs-phone'></i>06 45 04 87 62</li>
