--- a/forum.html
+++ b/forum.html
@@ -49,19 +49,19 @@
                  <br> <br>Il fallait donc  créer une plateforme interactive où les utilisateurs pouvaient
                 
                 créer un compte personnel pour accéder aux fonctionnalités,
-                publier des messages et répondre aux publications des autres ou encore
+                publier des messages et répondre aux publications des autres, ou encore
                 interagir avec les contenus via un système de likes et dislikes.
                 <br> <br>En réalisant ce projet, l’objectif était également de développer des compétences techniques dans la gestion des bases de données, l’authentification des utilisateurs, et la mise en œuvre d’une interface intuitive pour favoriser l’engagement des utilisateurs.</p>
         </div>
         <div class="roleinproject">
             <h2>MON <span>RÔLE</span> DANS LE PROJET</h2>
             <p>Dans ce projet, j’ai pris en charge la partie back-end, où j’ai assuré la gestion des publications ainsi que la mise en place du système de likes et dislikes. J’ai également développé des filtres permettant aux utilisateurs de trier les posts par catégories et de naviguer facilement. 
-                <br> <br>De plus, j’ai créé une page dédiée pour consulter uniquement ses propres posts ou ceux que l’on avait likés. Pour rendre l’expérience encore plus dynamique, j’ai utilisé les WebSockets, une technologie nouvelle pour moi, afin de gérer le système de like. Ce projet m’a offert une excellente opportunité de relever des défis techniques tout en enrichissant mes compétences</p>
+                <br> <br>De plus, j’ai créé une page dédiée pour consulter uniquement ses propres posts ou ceux que l’on avait likés. Pour rendre l’expérience encore plus dynamique, j’ai utilisé les WebSockets, une technologie nouvelle pour moi, afin de gérer le système de like. Ce projet m’a offert une excellente opportunité de relever des défis techniques tout en enrichissant mes compétences.</p>
         </div>
         <div class="learninproject">
             <h2>CE QUE J'AI <span>APPRIS</span> </h2>
             <p>Ce projet m’a permis de développer des compétences solides en back-end, notamment dans la gestion des publications et des interactions utilisateur. En découvrant et en utilisant les WebSockets, j’ai appris à intégrer des fonctionnalités de communication en temps réel, un aspect technique nouveau pour moi. 
-                <br> <br>J’ai également acquis une meilleure maîtrise de la gestion des données, en concevant des filtres avancés pour trier les publications par catégories ou afficher des vues personnalisées, comme les posts propres à un utilisateur ou ceux qu’il a aimés. Ce projet m’a aidé à renforcer ma capacité à résoudre des problématiques complexes et à améliorer l’expérience utilisateur grâce à des solutions dynamiques et efficaces</p>
+                <br> <br>J’ai également acquis une meilleure maîtrise de la gestion des données, en concevant des filtres avancés pour trier les publications par catégories ou afficher des vues personnalisées, comme les posts propres à un utilisateur ou ceux qu’il a aimés. Ce projet m’a aidé à renforcer ma capacité à résoudre des problématiques complexes et à améliorer l’expérience utilisateur grâce à des solutions dynamiques et efficaces.</p>
         </div>
     </section>
     <footer>
