--- a/main.html
+++ b/main.html
@@ -39,7 +39,7 @@
             <h2>Dernier <span>projet</span></h2>
             <div class="row">
                     <img src="./images/forum.png" alt="forum">
-                    <div class="layer">
+                    <div class="layer" id="layer-latest-project">
                         <h5>Forum</h5>
                         <p>Forum de discussion en ligne</p>
                         <a href="forum.html"><i class="bx bx-plus-circle"></i></a>
@@ -226,7 +226,7 @@
 
                 <input type="text" name="object" placeholder="Objet">
                 <textarea name="message" id="" cols="40" rows="10" placeholder="Message"></textarea>
-                <input type="submit" value="submit" class="send">
+                <input type="submit" value="Envoyer" class="send">
             </form>
         </div>
     </section>
