--- a/main.html
+++ b/main.html
@@ -54,8 +54,8 @@
         </div>
         <div class="about-text">
             <h2>A propos de <span>moi</span> </h2>
-            <h4>Recherche un stage en data IA / développement web</h4>
-            <p>Je suis un étudiant en deuxième année d'informatique, passionné et curieux, actuellement à la recherche d'un stage dans les domaines de la data ou du développement web, deux domaines qui me plaisent depuis le début de mon cursus. Enthousiaste à l'idée d'apprendre et de collaborer, je suis prêt à m'investir pleinement pour intégrer une équipe professionnelle et explorer les différentes voies de ma future carrière.</p>
+            <h4>Recherche un stage en Data/IA</h4>
+            <p>Je suis un étudiant en deuxième année d'informatique, passionné et curieux, actuellement à la recherche d'un stage dans les domaines de la data et de l'IA, deux domaines qui me plaisent depuis le début de mon cursus. Enthousiaste à l'idée d'apprendre et de collaborer, je suis prêt à m'investir pleinement pour intégrer une équipe professionnelle et explorer les différentes voies de ma future carrière.</p>
             <a href="./docs/Noé_LECHAT_CV.pdf" class="btn" download="./docs/Noé_LECHAT_CV.pdf">Télécharger CV</a>
         </div>
     </section>
