final project, go to production

--- a/tiki-taka-toe.html
+++ b/tiki-taka-toe.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projet Tiki-Taka-Toe</title>
+    <title>NL | Tiki-taka-toe</title>
     <link rel="stylesheet" href="project.css">
     <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="icon" href="./images/logoNL.png" type="image/png">
 </head>
 <body>
     <section class="project-details" id="project-details">
