--- a/forum.html
+++ b/forum.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projet Forum</title>
+    <title>NL | Forum</title>
     <link rel="stylesheet" href="project.css">
     <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="icon" href="./images/logoNL.png" type="image/png">
 </head>
 <body>
     <section class="project-details" id="project-details">
