add a new projet and new skills

--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
         <div class="latest-project">
             <h2>Dernier <span>projet</span></h2>
             <div class="row">
-                    <img src="./images/forum.png" alt="forum">
+                    <img src="./images/matchmaking.png" alt="matchmaking">
                     <div class="layer" id="layer-latest-project">
-                        <h5>Forum</h5>
-                        <p>Forum de discussion en ligne</p>
-                        <a href="forum.html"><i class="bx bx-plus-circle"></i></a>
+                        <h5>Matchmaking</h5>
+                        <p>Matchmaking pour jeu de morpion</p>
+                        <a href="matchmaking.html"><i class="bx bx-plus-circle"></i></a>
                     </div>
             </div>
         </div>
@@ -95,6 +95,9 @@
                         <i class='bx bxl-angular' style='color:#d6002f'  ><p>Angular</p></i> 
                         <i class='bx bxl-typescript' id="techno" style='color:#2f74c0'  ><p>TypeScript</p></i>
                         <i class='bx bxl-docker' style='color:#008de1'  ><p>Docker</p></i>
+                        <i class='bx bxl-react' style='color:#61dbfb'  ><p>React</p></i>
+                        <i class='bx bxl-php' style='color:#ffff'  ><p>PHP</p></i>
+                        <i class='bx bxl-c-plus-plus' style='color:#659ad2'  ><p>C# / C++</p></i>
                         <i><p></p></i>
                     </article>
                 </div>
@@ -113,6 +116,8 @@
                         <i class='bx bxs-data' style='color:gray'  ><p>SQL</p></i>
                         <i class='bx bxl-python' style='color:aliceblue'  ><p>Python</p></i>
                         <i class='bx bxl-mongodb' style='color:#4da53f' ><p>MongoDB</p></i>
+                        <i class='bx bxl-postgresql' style='color:#2f6792'  ><p>PostgreSQL</p></i>
+                        <i class='bx bx-pen' style='color:#f7762e'  ><p>Postman</p></i>
                     </article>
                 </div>
                 <div id="card-3">
@@ -202,11 +207,19 @@
                     </div>
                 </div>
                 <div class="row">
-                    <img src="./images/portfolio.png" alt="better-dj">
+                    <img src="./images/portfolio.png" alt="Portfolio">
                     <div class="layer">
                         <h5>Portfolio</h5>
                         <p>Création de mon portfolio</p>
                         <a href="portfolio.html"><i class="bx bx-plus-circle"></i></a>
+                    </div>
+                </div>
+                <div class="row">
+                    <img src="./images/matchmaking.png" alt="Matchmaking">
+                    <div class="layer">
+                        <h5>Projet Matchmaking</h5>
+                        <p>Création d'un serveur de matchmaking'</p>
+                        <a href="matchmaking.html"><i class="bx bx-plus-circle"></i></a>
                     </div>
                 </div>
             </div>
