correct screen bug

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                     <img src="./images/matchmaking.png" alt="Matchmaking">
                     <div class="layer">
                         <h5>Projet Matchmaking</h5>
-                        <p>Création d'un serveur de matchmaking'</p>
+                        <p>Création d'un serveur de matchmaking</p>
                         <a href="matchmaking.html"><i class="bx bx-plus-circle"></i></a>
                     </div>
                 </div>
