--- a/matchmaking.html
+++ b/matchmaking.html
@@ -36,7 +36,7 @@
                 <a href="https://github.com/lechatn/projectMatchmaking.git">Lien Github</a>
             </div>
         </div>
-        <img src="./images/matchmaker.png" class="home-photo" alt="">
+        <img src="./images/matchmaking.png" class="home-photo" alt="">
     </section>
     <section class="project-presentation">
         <div class="project-target">
