Add immobilier project details page with objectives, roles, and learnings

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <h3>Bonjour, je m'appelle</h3>
             <h1><span>Noé</span> LECHAT</h1>
             <br>
-            <p>Etudiant en informatique</p>
+            <p>Etudiant en informatique passionné par la data et l'IA</p>
             <div class="home-sci">
                 <a href="https://www.linkedin.com/in/noé-lechat-175b90265" style="--i:6"><i class='bx bxl-linkedin' ></i></a>
                 <a href="https://github.com/lechatn" style="--i:7"><i class='bx bxl-github' ></i></a>
@@ -49,12 +49,12 @@
         <div class="latest-project">
             <h2>Dernier <span>projet</span></h2>
             <div class="row">
-                    <img src="./images/matchmaking.png" alt="matchmaking">
-                    <div class="layer" id="layer-latest-project">
-                        <h5>Matchmaking</h5>
-                        <p>Matchmaking pour jeu de morpion</p>
-                        <a href="matchmaking.html"><i class="bx bx-plus-circle"></i></a>
-                    </div>
+                <img src="./images/immobilier.png" alt="Immobilier">
+                <div class="layer">
+                    <h5>Prédiction prix immobilier</h5>
+                    <p>Création d'un modèle ML de prédiction de prix immobiliers</p>
+                    <a href="immobilier.html"><i class="bx bx-plus-circle"></i></a>
+                </div>
             </div>
         </div>
     </section>
@@ -66,8 +66,8 @@
         <div class="about-text">
             <h2>A propos de <span>moi</span> </h2>
             <h4>Recherche un stage en Data/IA</h4>
-            <p>Je suis un étudiant en deuxième année d'informatique, passionné et curieux, actuellement à la recherche d'un stage dans les domaines de la data et de l'IA, deux domaines qui me plaisent depuis le début de mon cursus. Enthousiaste à l'idée d'apprendre et de collaborer, je suis prêt à m'investir pleinement pour intégrer une équipe professionnelle et explorer les différentes voies de ma future carrière.</p>
-            <a href="./docs/Noé_LECHAT_CV_DataIA.pdf" class="btn" download="./docs/Noé_LECHAT_CV_DataIA.pdf">Télécharger CV</a>
+            <p>Je suis un étudiant en deuxième année d'informatique, passionné et curieux, actuellement à la recherche d'un stage  et d'une alternance dans les domaines de la data et de l'IA, deux domaines qui me plaisent depuis le début de mon cursus. Enthousiaste à l'idée d'apprendre et de collaborer, je suis prêt à m'investir pleinement pour intégrer une équipe professionnelle et explorer les différentes voies de ma future carrière.</p>
+            <a href="./docs/CV_alternance_Noe_LECHAT.pdf" class="btn" download="./docs/CV_alternance_Noe_LECHAT">Télécharger CV</a>
         </div>
     </section>
     <section class="skills" id="skills">
@@ -182,6 +182,14 @@
         <div class="main-text" id="project">
             <h2>Mes <span>projets</span></h2>
             <div class="portfolio-content">
+                <div class="row">
+                    <img src="./images/immobilier.png" alt="Immobilier">
+                    <div class="layer">
+                        <h5>Prédiction prix immobilier</h5>
+                        <p>Création d'un modèle ML de prédiction de prix immobiliers</p>
+                        <a href="immobilier.html"><i class="bx bx-plus-circle"></i></a>
+                    </div>
+                </div>
                 <div class="row">
                     <img src="./images/forum.png" alt="forum">
                     <div class="layer">
